<resources>
    <string name="app_name">Weekly.</string>

    <string name="cont">Continue</string>

    <string name="time_pattern">%1$s:%2$s</string>
    <string name="percentage_pattern">%1$s%%</string>

    <!-- Goals -->
    <string name="goal_type_counted">Counted</string>
    <string name="goal_type_timed">Timed</string>
    <string name="goal_type_counted_description">A basic goal in which you keep track of how many times you want to complete your task.</string>
    <string name="goal_type_timed_description">A goal which is able to keep track of the amount of time you spend doing something, ensuring you hit your target.</string>
    <string name="goal_start_date">Start date</string>
    <string name="goal_periodic_increase">Periodic increase</string>
    <string name="goal_color">Colour</string>
    <string name="goal_end_date">End date</string>
    <string name="goal_resets">Resets</string>
    <string name="goal_reset_date">Reset date</string>
    <string name="goal_no_end">-</string>

    <!-- Goal resets -->
    <string name="goal_frequency_never">Never</string>
    <string name="goal_frequency_daily">Daily</string>
    <string name="goal_frequency_weekly">Weekly</string>
    <string name="goal_frequency_fortnight">Fortnightly</string>
    <string name="goal_frequency_monthly">Monthly</string>
    <string name="goal_frequency_yearly">Yearly</string>

    <!-- Goal subtitle patterns -->
    <string name="goal_subtitle_pattern_left">Only %1$s to go.</string>
    <string name="goal_subtitle_pattern_over_half">Over half way there.</string>
    <string name="goal_subtitle_pattern_start">You have a target of %1$s.</string>

    <!-- Main -->
    <string name="goal_scheduled">This goal is scheduled for %1$s</string>
    <string name="goals_empty">You currently do not have any goals.</string>
    <string name="goals_empty_add">Add a goal</string>
    <string name="main_tasks_none">No tasks</string>
    <string name="main_tasks_done">All done</string>

    <!-- Layouts -->
    <string name="main_layout_default">Default</string>
    <string name="main_layout_tasks">Tasks</string>
    <string name="main_layout_goals">Goals</string>

    <!-- Add goal -->
    <string name="add_goal_title">Add goal</string>
    <string name="add_goal_title_hint">What is your goal?</string>
    <string name="add_goal_target_hint">What is your target?</string>
    <string name="add_goal_reset_hint">How often should it repeat?</string>
    <string name="add_goal_done_text">Are you ready to add your goal?</string>
    <string name="add_goal_done_more">More options</string>
    <string name="add_goal_done_add_goal">Add your goal</string>
    <string name="add_goal_increase_hint">Your target for this goal will increase by this value every time it resets.</string>
    <string name="add_goal_end_neutral">None</string>
    <string name="add_goal_target_chip">Target - %1$s</string>

    <!-- Goal success -->
    <string name="goal_success">Well done on completing your goal.</string>

    <!-- Goal timing -->
    <string name="goal_timing_stop">Stop timing</string>
    <string name="goal_timing_done">Done</string>

    <!-- View goal -->
    <string name="view_goal_add_progress">Add progress</string>
    <string name="view_goal_target">/%1$s</string>
    <string name="goal_view_progress">%1$s/%2$s</string>
    <string name="goal_delete">Delete goal</string>
    <string name="goal_next_reset">Next resets</string>
    <string name="goal_history">History </string>

    <!-- View tasks -->
    <string name="view_tasks_empty_title">No tasks</string>
    <string name="view_tasks_empty_body">Add one using the plus button above</string>

    <!-- Overdue tasks -->
    <string name="overdue_tasks_title">Overdue</string>
</resources>
